# order_meja

./: .gitignore  docker-compose.yml  package.json  run.sh
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  run.sh
backend/migrations/: 20260529000001_initial.sql  20260529000002_auth.sql  20260529000003_rbac.sql  20260529000004_password_resets.sql  20260529000005_user_settings.sql  20260609000006_roles_permissions_timestamps.sql  20260612000007_sprint_1_1_tenants.down.sql  20260612000007_sprint_1_1_tenants.up.sql  20260612000008_endpoint_permissions.down.sql  20260612000008_endpoint_permissions.up.sql  20260612000009_sprint_1_2_outlets.down.sql  20260612000009_sprint_1_2_outlets.up.sql  20260612000010_sprint_1_3_product_categories.down.sql  20260612000010_sprint_1_3_product_categories.up.sql  20260612000011_sprint_1_4_products.down.sql  20260612000011_sprint_1_4_products.up.sql  20260612000012_sprint_1_5_product_prices.down.sql  20260612000012_sprint_1_5_product_prices.up.sql  20260612000013_sprint_1_6_seed_catalog.down.sql  20260612000013_sprint_1_6_seed_catalog.up.sql  20260612000014_sprint_2_1_stocks.down.sql  20260612000014_sprint_2_1_stocks.up.sql  20260612000015_sprint_2_2_transactions.down.sql  20260612000015_sprint_2_2_transactions.up.sql  20260612000016_sprint_3_1_workers.down.sql  20260612000016_sprint_3_1_workers.up.sql  20260612000017_sprint_3_2_shift_templates.down.sql  20260612000017_sprint_3_2_shift_templates.up.sql  20260612000018_sprint_3_3_shifts.down.sql  20260612000018_sprint_3_3_shifts.up.sql  20260612000021_sprint_5_payroll.down.sql  (+7 more)
(+135 files in other folders)
